fix alignment error by adding single column

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .container {
-  background: rgba(255,255,255,0.5)
+  background: rgba(255,255,255,0.7)
 }
 
 .jumbotron {
@@ -34,9 +34,11 @@ body {
 
 img {
   margin: 10px;
+  width: 150px;
+
 }
 
-#headshot {
+img.key {
   width: 200px;
   float: left;
   margin-top: 0px;
